2006-04-21 Mikhail Khodjaiants
	Don't create pty when using gdbserver.
	* AbstractGDBCDIDebugger.java
	* GDBServerCDIDebugger2.java

2006-04-21 Mikhail Khodjaiants
	Close the pty if the session creation failed.
	* MIPlugin.java
 
2006-04-18 Mikhail Khodjaiants
	Duplicate message key.
	* MIPluginResources.properties
	* AbstractGDBCDIDebugger.java

2006-04-17 Mikhail Khodjaiants
	Breakpoint can be temporary and hardware at the same time.
	* MIBreakInsert.java

2006-04-16 Mikhail Khodjaiants
	Bug 113107: Make trace logs more readily available.
	* AbstractGDBCDIDebugger.java
	* IMILaunchConfigurationConstants.java

2006-04-13 Mikhail Khodjaiants
	Bug 113107: Make trace logs more readily available.
	Core support for the "Verbose Mode" action.
	* Target.java
	* MISession.java
	* RxThread.java
	* AbstractGDBCDIDebugger.java
	+ GDBProcess.java

2006-04-12 Mikhail Khodjaiants
	Write log messages to the system out instead of err.
	* MIPlugin.java

2006-04-12 Mikhail Khodjaiants
	Bug 136206: Suppress Resumed events when processing solib events.
	* EventManager.java
	* RxThread.java
	* Command.java
	* MIEvent.java

2006-04-12 Mikhail Khodjaiants
	Bug 119740: allow to specify only a subset of shared objects that we want symbols to be loaded for.
	Support for deferred breakpoints.
	* BreakpointManager.java
	* EventManager.java
	* SharedLibraryManager.java
	* Target.java
	* GDBCDIDebugger.java
	* GDBCDIDebugger2.java
	* GDBDebugger.java

2006-04-10 Mikhail Khodjaiants
	Bug 119740: allow to specify only a subset of shared objects that we want symbols to be loaded for.
	* SharedLibraryManager.java
	* GDBCDIDebugger2.java
	* IMILaunchConfigurationConstants.java
	* MICoreUtils.java

2006-04-10 Mikhail Khodjaiants
	"set solib-search-path" and "show solib-search-path" are not supported on Windows.
	* StandardWinCommandFactory.java

2006-04-03 Mikhail Khodjaiants
	Bug 134617: The "stop on shared library event" option doesn't work.
	* GDBCDIDebugger2.java

2006-03-31 Mikhail Khodjaiants